@@ -20,6 +20,5 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/org.dom4j"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/de.xwic.cube.webui"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/de.xwic.cube.xlsbridge"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/OpenCSV"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
